unitask dependency remove

--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "Fluffy Pixels",
     "fps"
   ],
-  "dependencies": {
-    "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask"
-  },
+  "dependencies": {},
   "repository": {
     "type": "git",
     "url": "https://github.com/fixeles/fluffy-pool"
