--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "Fluffy Pixels",
     "fps"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "com.fps.utils": "0.0.1"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/fixeles/fluffy-pool"
