--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.fps.pool",
   "author": "Fixeles",
-  "displayName": "Fluffy pool",
+  "displayName": "Fluffy Pool",
   "unity": "2022.3",
   "version": "0.0.1",
   "keywords": [
