--- a/FPS.Pool.asmdef
+++ b/FPS.Pool.asmdef
@@ -5,7 +5,8 @@
         "GUID:f51ebe6a0ceec4240a699833d6309b23",
         "GUID:9e24947de15b9834991c9d8411ea37cf",
         "GUID:84651a3751eca9349aac36a66bba901b",
-        "GUID:f58d8b09d17c74749912b21434b3b036"
+        "GUID:f58d8b09d17c74749912b21434b3b036",
+        "GUID:b0214a6008ed146ff8f122a6a9c2f6cc"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
